components/ProgressBar/ProgressBar.module.scss
@import '@common/variables.scss';
@import '@common/colors.scss';
@import '@common/typo.scss';

@mixin active {
  color: $base-white;
  background-color: $base-black;
  border: none;
}

.wrapper {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
}

.lineWrap {
  display: flex;
  flex-direction: row;
  width: 100%;
  max-width: 390px;
}

.stepItem {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  gap: $xs;
  width: 100%;
}

.stepItem::before {
  content: '';
  position: absolute;
  right: 0;
  bottom: 45%;
  width: 100%;
  height: 2px;
  background-color: $additional-gray-pre-middle;
  transform: translateY(50%);
}

.reverse {
  align-items: flex-end;
}

.step {
  position: relative;
  z-index: 10;
  display: flex;
  justify-content: center;
  align-items: center;
  width: $l;
  height: $l;
  font-weight: 500;
  color: $additional-gray-pre-middle;
  background-color: $base-white;
  border: 2px solid #bdbdbd;
  border-radius: 9999px;

  @include font-s;
}

.active .step {
  @include active;
}

.activeStep {
  @include active;
}

.activeStepItem::before {
  background-color: $base-black;
}

.active::before,
.complete::before {
  background-color: $base-gray;
}

.complete .step {
  color: $base-white;
  background-color: $base-black;
  border: none;
}

.approvedNotComplete::before {
  background-color: $base-black;
}

.approvedStep {
  color: $base-black !important;
  background-color: $base-white !important;
  border: 2px solid $base-black !important;
}

